# memocean

./: .gitignore  LICENSE  README.md  README.zh-TW.md  pyproject.toml  simhash_poc.py
benchmarks/: client-expansion-benchmark.py  clsc-ab-benchmark.py  cmrc-benchmark.py  drcd-benchmark.py  results-20260414.json  results-client-expansion-cmrc-20260416.json  results-client-expansion-drcd-20260416.json  results-cmrc-20260416.json  results-drcd-20260416.json  results-scifact-20260416.json  scifact-benchmark.py
clsc/: README.md  backfill_closet.py  closet.py  decoder.py  dialect.py  encoder.py  fts5_bridge.py  han_ner.py  hancloset.py  onboarding.py  radar.py
clsc/tests/: test_v0_7.py
fts5/: README.md  backfill.py  backfill_closet_fts.py  backfill_embeddings.py  backfill_radar_fts.py  ingest_one.py  lib.py  schema.sql  search.py
kg/: kg_helper.py  knowledge_graph.py
kg/tests/: backfill_demo.py  test_temporal_kg.py
memocean_mcp/: __init__.py  __main__.py  config.py  privacy.py  server.py  slug_mapper.py
memocean_mcp/migrations/: alter_radar_add_summary.py
memocean_mcp/tools/: ask_opus.py  closet_get.py  closet_search.py  fts_search.py  ingest_file.py  insert_row.py  kg_query.py  messages_hybrid_search.py  ocean_search.py  query_expand.py  radar_get.py  radar_search.py  report_store.py  reranker.py  simhash.py  skill_tools.py  task_create.py  unified_search.py
tests/: test_ocean_seabed.py  test_ocean_search_gbrain.py  test_report_store.py  test_tools.py
