[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "memocean"
version = "0.2.0"
description = "MemOcean MCP server — library mode, local only"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
memocean-mcp = "memocean_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["memocean_mcp*", "fts5*", "kg*", "clsc*"]
