[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "memocean-mcp"
version = "0.5.0"
description = "Local-first AI memory MCP server for Obsidian vaults. CJK-optimized."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mcp", "obsidian", "memory", "ai", "claude", "cjk", "chinese"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Database Engines/Servers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
homepage = "https://github.com/ChannelLabAI/memocean"

[project.scripts]
memocean-mcp = "memocean_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["memocean_mcp*", "fts5*", "kg*", "clsc*"]
